--- a/css/main.css
+++ b/css/main.css
@@ -102,6 +102,10 @@ textarea {
    Author's custom styles
    ========================================================================== */
 
+.contact-wrapper {
+    width: 100%;
+}
+
 /*---------base-header----footer---styles--------*/
 
 header, 
@@ -116,7 +120,7 @@ footer{
 header {
     padding: 15px 0;
 }
-}
+
 
 header .content-wrapper {
     display: flex;
@@ -124,20 +128,12 @@ header .content-wrapper {
     align-items: center;
     flex-flow: row wrap;
     margin: 0;
-
 }
 
-header figure {
-
-}
-
-.contact-wrapper {
+.header-divider {
     width: 100%;
-}
-
-.header-devider {
-    width:     ;
-
+    height: 1px;
+    margin: 10px 0 20px 0;
 }
 
 header nav {
@@ -146,152 +142,158 @@ header nav {
     align-items: center;
     flex-flow: row wrap;
     width: 60%;
-
 }
-
-.reviews {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-flow: row wrap;
-
-}
-
 header nav ul {
     display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 44%;
-}
-
-.hero-area {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-aside {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-flow: row wrap;
-    padding: 28px 36px;
-}
-
-
-
-.features {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-flow: row wrap;
-    padding: 48px; 
-}
-
-.features article{
+    justify-content: space-around;
     width: 100%;
-    padding: 60px;
-}
-
-.features .features-items {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-flow: row wrap;
-    width: 55%;
-}  
-
-.features p {
-    margin: 0px;
-}
-
-.reviews {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-flow: row wrap;
-    padding: 50px;
-}
-
-.reviews h3{
-    width: 47%;
-}
-
-.reviews .content-wrapper {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-flow: row wrap;
-}
-
-.mission {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-flow: row wrap;
-}
-
-.contact-section {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-flow: row wrap;
-}
-
-.faq {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-flow: row wrap;
-}
-
-.faq .content-wrapper {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-flow: row wrap;
-}
-
-/*----------------Mobile Styles - Homepage------------*/
-
-.hero-area {
-    flex-flow: row wrap;
-
-}
-
-
-/*------footer------*/
-
-footer {
-    padding: 46px 0;
-}
-
-footer .comtent-wrapper {
+  }
+  
+  footer {
+    flex-direction: column;
+  }
+  
+  footer p {
+    margin: 0;
+  }
+  
+  footer .content-wrapper {
     width: 55%;
     margin: 50px 0;
-}
-
-footer .social-icons {
+  }
+  
+  footer .contact {
+    margin-bottom: 50px;
+  }
+  
+  footer .social-icons {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+  }
+  
+  footer .social-icons p {
     display: flex;
     justify-content: center;
     align-items: center;
-}
+  }
+  
+  footer .copyright {
+    margin: 20px 0;
+  }
+  
+  /* -------------------- Mobile Styles - Homepage -------------------- */
 
-footer .social {
+/* Hero Area */
+
+.hero-area {
+    display: flex;
+    justify-content: center;
+    flex-flow: row wrap;
+  }
+  
+  /* Aside */
+  
+  aside {
     display: flex;
     justify-content: center;
     align-items: center;
-}
+    flex-flow: row wrap;
+  }
+  
+  /* Features */
+  
+  .features {
+    display: flex;
+    justify-content: center;
+    flex-flow: row wrap;
+  }
+  
+  .features h2 {
+    margin-bottom: 60px;
+  }
+  
+  .features article {
+    width: 55%;
+    margin: 30px 0;
+  }
+  
+  .features .features-items {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-flow: row wrap;
+  }
+  
+  .features p {
+    margin: 0;
+  }
+  
+  /* Reviews */
+  
+  .reviews {
+    display: flex;
+    justify-content: center;
+    flex-flow: row wrap;
+  }
+  
+  .reviews h2 {
+    margin-bottom: 40px;
+  }
+  
+  .reviews h3 {
+    width: 55%;
+    margin: 20px 0;
+  }
+  
+  /* ==========================================================================
+     About Page
+     ========================================================================== */
+  
+  .mission {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-flow: row wrap;
+  }
+  
+  .contact-section {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-flow: row wrap;
+  }
+  
+  .contact-content p {
+    margin: 0;
+  }
 
-footer p {
-    margin: 0px;
-}
+/* ==========================================================================
+   FAQ Page
+   ========================================================================== */
 
-
-
-
-
-
+   .faq {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-flow: row wrap;
+  }
+  
+  .faq .content-wrapper {
+    margin: 50px 0 0 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-flow: row wrap;
+  }
+  
+  .faq h2 {
+    margin-bottom: 40px;
+  }
+  
+  .faq-content {
+    margin-bottom: 50px;
+  }
 
  /* ==========================================================================
    Helper classes
@@ -380,9 +382,136 @@ footer p {
    Modify as content requires.
    ========================================================================== */
 
-   @media only screen and (min-width: 35em) {
-    /* Style adjustments for viewports that meet the condition */
-}
+   @media only screen and (min-width:768px) {
+    /*Tablet styles here*/
+  
+    /* General styles */
+    .content-wrapper {
+      max-width: 640px;
+      margin: 100px 0;
+    }
+  
+    /* Header */
+    header {
+      justify-content: space-around;
+    }
+  
+    header .content-wrapper {
+      width: 100%;
+      justify-content: space-between;
+    }
+  
+    header nav {
+      width: 20%;
+    }
+  
+    header nav ul {
+      justify-content: space-between;
+    }
+  
+    .header-divider {
+      display: none;
+    }
+    /* Hero Area */
+  
+    /* Aside */
+    aside .content-wrapper {
+      margin: 50px 0;
+      display: flex;
+      justify-content: space-between;
+      flex-flow: row wrap;
+    }
+  
+    aside .content-wrapper .form-description,
+    aside .content-wrapper .form {
+      width: 35%;
+      margin: 0;
+    }
+  
+    /* Features */
+    .features article {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-flow: column wrap;
+      flex-basis: 50%;
+    }
+    
+    .features .features-item-description {
+      width: 50%;
+    }
+  
+    /* Reviews */
+    .reviews article {
+      display: flex;
+      justify-content: space-between;
+    }
+  
+    .reviews article div {
+      width: 49%;
+    }
+  
+    /* Footer */
+    footer .content-wrapper {
+      width: 65%;
+      margin: 100px 0;
+    }
+  
+    .footer-content {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+  
+    footer .contact {
+      margin-bottom: 0;
+    }
+  
+    footer .copyright {
+      width: 100%;
+    }
+  
+    /* ==========================================================================
+     About Page
+     ========================================================================== */
+  
+    .mission-content {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+  
+    .mission-content p {
+      width: 40%;
+    }
+  
+    .contact-section .content-wrapper h2 {
+      width: 80%;
+    }
+  
+    .contact-content {
+      display: flex;
+      justify-content: space-between;
+      align-items: flex-start;
+    }
+  
+    /* ==========================================================================
+     FAQ Page
+     ========================================================================== */
+  
+    .faq .content-wrapper {
+      justify-content: space-between;
+    }
+  
+    .faq-content {
+      flex-basis: 40%;
+    }
+  
+    .faq h2 {
+      width: 100%;
+    }
+  }
+
 
 @media print,
        (-webkit-min-device-pixel-ratio: 1.25),
