--- a/css/main.css
+++ b/css/main.css
@@ -512,6 +512,67 @@ header nav ul {
     }
   }
 
+  @media only screen and (min-width: 1200px) {  
+    /*Desktop styles here */  
+        .content-wrapper {
+             max-width: 960px;
+  
+        }
+     
+         /* Hero */
+        .hero-area h1 {
+            width: 70%;
+        }
+     
+        /* Aside */
+        aside .content-wrapper {
+            justify-content:
+        }
+     
+        aside .content-wrapper .form-description,
+        aside .content-wrapper .form {
+            width: 30%;
+        }
+     
+        /* Features */
+        .features h2 {
+            width: 70%;
+        }
+     
+        .features article {
+            flex-basis: 33%;
+        }
+     
+        /* Reviews */ 
+        .reviews article div {
+            width: 50%;
+        }
+     
+    /* ==========================================================================
+       About Page
+       ========================================================================== */
+        .mission h2,
+        .contact-section .content-wrapper h2 {
+            width: 100%;
+        }
+     
+        .contact-section .content-wrapper h2 {
+            margin-bottom: 100%;
+        }
+     
+     
+    /* ==========================================================================
+       FAQ Page
+       ========================================================================== */
+        .faq h2 {
+            width: 100%;
+        }
+     
+        .faq-content {
+            flex-basis: 50%;
+        }
+     
+    }
 
 @media print,
        (-webkit-min-device-pixel-ratio: 1.25),
