--- a/css/main.css
+++ b/css/main.css
@@ -112,6 +112,7 @@ body {
   font-family: 'Open Sans', sans-serif;
   font-size: 1em;
   text-align: left;
+ 
 }
  
 ul, 
@@ -128,6 +129,7 @@ a {
 h2 {
   font-family: 'Poppins', sans-serif;
   font-size: 2.25em;
+  color: #fff;
   
 }
  
@@ -135,21 +137,21 @@ h3,
 h4 {
      font-family: 'Poppins', sans-serif;
      font-size: 1.875em;
+     color: #FFFFFF;
 }
  
 p {
   font-size: 1.125em;
   line-height: 30px;
+  color: #fff;
 	
 }
- 
- 
+  
 address {
   font-style: normal;
  
 }
  
-
 .contact-wrapper {
     width: 90%;
     margin: 50px 0;
@@ -163,11 +165,13 @@ footer{
     justify-content: center;
     align-items: center;
     flex-flow: row wrap;
+    background-color: #202322;
 }
 
 
 header {
     padding: 15px 0;
+    color: ##202322;
 }
 
 
@@ -204,6 +208,7 @@ header nav ul {
   
   footer p {
     margin: 0;
+    color: #FFFFFF;
 }
   
 footer .content-wrapper {
@@ -225,10 +230,44 @@ footer .social-icons p {
     display: flex;
     justify-content: center;
     align-items: center;
+    color:#FFFFFF;
 }
   
 footer .copyright {
     margin: 20px 0;
+    color:#FFFFFF;
+}
+
+aside .form {
+  margin-top: 30px;
+  
+
+}
+ 
+aside .content-wrapper {
+  background-color: #527158;
+  
+}
+
+input[type=text] {
+  box-sizing: border-box;
+  width: 100%;
+  color: #2a423a;
+  font-style: italic;
+}
+ 
+input[type=button] {
+  width: 100%;
+  padding: 20px 0;
+  margin-top: 20px;
+  background-color: #2a423a;
+  font-family: 'Poppins', Helvetica, Arial, sans-serif;
+  font-weight: 500;
+  font-size: 1.125em;
+  color: #e2e3ed;
+  border: none;
+  text-align: center;
+  text-transform: uppercase;
 }
   
   /* -------------------- Mobile Styles - Homepage -------------------- */
@@ -265,9 +304,10 @@ footer .copyright {
 .features article {
     width: 55%;
     margin: 30px 0;
+    
   }
   
-  .features .features-items {
+.features .features-items {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -284,16 +324,22 @@ footer .copyright {
     display: flex;
     justify-content: center;
     flex-flow: row wrap;
+    background-color: #2A423A;
   }
   
 .reviews h2 {
     margin-bottom: 40px;
+    color: #fff;
+  
   }
   
 .reviews h3 {
     width: 55%;
     margin: 20px 0;
+    color: #fff;
   }
+
+
   
   /* ==========================================================================
      About Page
@@ -464,17 +510,25 @@ footer .copyright {
     /* Hero Area */
   
     /* Aside */
+
+    aside {
+      background-color: #527158;
+
+  }
+
     aside .content-wrapper {
       margin: 50px 0;
       display: flex;
       justify-content: space-between;
       flex-flow: row wrap;
+     
     }
   
     aside .content-wrapper .form-description,
     aside .content-wrapper .form {
       width: 35%;
       margin: 0;
+      
     }
   
     /* Features */
