--- a/css/main.css
+++ b/css/main.css
@@ -114,7 +114,7 @@ body {
   text-align: left;
  
 }
- 
+
 ul, 
 ol {
   list-style-type: none;
@@ -133,6 +133,10 @@ h2 {
   
 }
  
+h1 {
+  color:#fff;
+}
+
 h3, 
 h4 {
      font-family: 'Poppins', sans-serif;
@@ -157,6 +161,14 @@ address {
     margin: 50px 0;
 }
 
+img { 
+	width: 100%;
+}
+ 
+figure {
+        margin: 0;
+}
+
 /*---------base-header----footer---styles--------*/
 
 header, 
@@ -171,7 +183,7 @@ footer{
 
 header {
     padding: 15px 0;
-    color: ##202322;
+    color: #202322;
 }
 
 
@@ -181,7 +193,8 @@ header .content-wrapper {
     align-items: center;
     flex-flow: row wrap;
     margin: 0;
-}
+  
+}  
 
 .header-divider {
     width: 100%;
@@ -202,11 +215,11 @@ header nav ul {
     width: 100%;
 }
   
-  footer {
+footer {
     flex-direction: column;
 }
   
-  footer p {
+footer p {
     margin: 0;
     color: #FFFFFF;
 }
@@ -274,13 +287,22 @@ input[type=button] {
 
 /* Hero Area */
 
+header figure {
+  width: 60%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: row wrap;
+}
+
 .hero-area {
     display: flex;
     justify-content: center;
     flex-flow: row wrap;
+    background: url('../img/hero.jpg') center no-repeat #333;
+    background-size: cover;
   }
   
-  /* Aside */
   
  aside {
     display: flex;
@@ -295,6 +317,8 @@ input[type=button] {
     display: flex;
     justify-content: center;
     flex-flow: row wrap;
+    background: url('../img/raw.jpg') center no-repeat #333;
+    background-size: cover;
   }
   
 .features h2 {
@@ -322,9 +346,10 @@ input[type=button] {
   
 .reviews {
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     flex-flow: row wrap;
     background-color: #2A423A;
+
   }
   
 .reviews h2 {
@@ -615,20 +640,21 @@ input[type=button] {
     }
   }
 
-  @media only screen and (min-width: 1200px) {  
-    /*Desktop styles here */  
-        .content-wrapper {
-             max-width: 960px;
+@media only screen and (min-width: 1200px) {  
+/*Desktop styles here */  
+
+.content-wrapper {
+      max-width: 960px;
   
-        }
+}
      
          /* Hero */
-        .hero-area h1 {
-            width: 70%;
-        }
+.hero-area h1 {
+      width: 70%;
+}
      
         /* Aside */
-        aside .content-wrapper {
+aside .content-wrapper {
             justify-content:
         }
      
