--- a/css/main.css
+++ b/css/main.css
@@ -319,6 +319,7 @@ header figure {
     flex-flow: row wrap;
     background: url('../img/raw.jpg') center no-repeat #333;
     background-size: cover;
+
   }
   
 .features h2 {
@@ -340,6 +341,11 @@ header figure {
   
 .features p {
     margin: 0;
+  }
+
+  .features i {
+    font-size: 3.75em;
+          margin-bottom: 40px;
   }
   
   /* Reviews */
