--- a/css/main.css
+++ b/css/main.css
@@ -95,14 +95,11 @@ textarea {
     padding: 0.2em 0;
 }
 
-
-
-
  /* ==========================================================================
-   Author's custom styles
+                            Author's custom styles
    ========================================================================== */
 
-   /* General Styles */
+/* General Styles */
  
 html {
     font-size: 16px;
@@ -194,34 +191,59 @@ header .content-wrapper {
     flex-flow: row wrap;
     margin: 0;
   
-}  
+}
+
+header figure {
+    width: 60%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-flow: row wrap;
+}
 
 .header-divider {
+    background: #3a3a3a; 
     width: 100%;
     height: 1px;
     margin: 10px 0 20px 0;
 }
 
 header nav {
+  width: 60%;
+  font-size: 1.125em;
+  font-weight: 700;
+  text-transform: uppercase;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  flex-flow: row wrap;
+}
+
+/*header nav {
     display: flex;
     justify-content: space-around;
     align-items: center;
     flex-flow: row wrap;
-    width: 60%;
+    width: 60%;*/
 }
 header nav ul {
     display: flex;
     justify-content: space-around;
     width: 100%;
 }
+
+header nav ul li {
+  font-size: 1.125em;
+}
   
 footer {
-    flex-direction: column;
+    flex-direction: column;   
+    text-align: center;
 }
   
 footer p {
     margin: 0;
-    color: #FFFFFF;
+    
 }
   
 footer .content-wrapper {
@@ -243,47 +265,16 @@ footer .social-icons p {
     display: flex;
     justify-content: center;
     align-items: center;
-    color:#FFFFFF;
+   
 }
   
 footer .copyright {
     margin: 20px 0;
-    color:#FFFFFF;
 }
 
-aside .form {
-  margin-top: 30px;
-  
 
-}
- 
-aside .content-wrapper {
-  background-color: #527158;
   
-}
-
-input[type=text] {
-  box-sizing: border-box;
-  width: 100%;
-  color: #2a423a;
-  font-style: italic;
-}
- 
-input[type=button] {
-  width: 100%;
-  padding: 20px 0;
-  margin-top: 20px;
-  background-color: #2a423a;
-  font-family: 'Poppins', Helvetica, Arial, sans-serif;
-  font-weight: 500;
-  font-size: 1.125em;
-  color: #e2e3ed;
-  border: none;
-  text-align: center;
-  text-transform: uppercase;
-}
-  
-  /* -------------------- Mobile Styles - Homepage -------------------- */
+/* -------------------- Mobile Styles - Homepage -------------------- */
 
 /* Hero Area */
 
@@ -301,17 +292,50 @@ header figure {
     flex-flow: row wrap;
     background: url('../img/hero.jpg') center no-repeat #333;
     background-size: cover;
-  }
+    min-height: 500px;
+}
   
   
- aside {
+aside {
     display: flex;
     justify-content: center;
     align-items: center;
     flex-flow: row wrap;
-  }
+}
+
+aside .form {
+      margin-top: 30px;
   
-  /* Features */
+    
+}
+     
+aside .content-wrapper {
+      background-color: #527158;
+      
+}
+
+input[type=text] {
+      box-sizing: border-box;
+      width: 100%;
+      color: #2a423a;
+      font-style: italic;
+}
+     
+input[type=button] {
+      width: 100%;
+      padding: 20px 0;
+      margin-top: 20px;
+      background-color: #2a423a;
+      font-family: 'Poppins', Helvetica, Arial, sans-serif;
+      font-weight: 500;
+      font-size: 1.125em;
+      color: #e2e3ed;
+      border: none;
+      text-align: center;
+      text-transform: uppercase;
+}
+
+ /* Features */
   
 .features {
     display: flex;
@@ -320,62 +344,81 @@ header figure {
     background: url('../img/raw.jpg') center no-repeat #333;
     background-size: cover;
 
-  }
+}
   
 .features h2 {
     margin-bottom: 60px;
-  }
+}
   
 .features article {
     width: 55%;
     margin: 30px 0;
     
-  }
+}
   
 .features .features-items {
     display: flex;
     justify-content: center;
     align-items: center;
     flex-flow: row wrap;
-  }
+}
   
 .features p {
     margin: 0;
-  }
+    text-align: center;
+}
 
-  .features i {
+.features i {
     font-size: 3.75em;
           margin-bottom: 40px;
-  }
+}
   
-  /* Reviews */
-  
-.reviews {
+ /* Reviews */
+
+ .reviews {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     flex-flow: row wrap;
     background-color: #2A423A;
 
-  }
+}
   
 .reviews h2 {
     margin-bottom: 40px;
-    color: #fff;
+    line-height: 1;
   
-  }
+}
   
 .reviews h3 {
     width: 55%;
-    margin: 20px 0;
-    color: #fff;
-  }
+    margin: 20px 0; 
+}
 
-
+/* ==========================================================================
+                                About Page
+========================================================================== */
   
-  /* ==========================================================================
-     About Page
-     ========================================================================== */
-  
+.mission {
+      background-color: #527158;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-flow: row wrap;
+}
+    
+.contact-section {
+      background-color: #2a423a;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-flow: row wrap;
+}
+    
+.contact-content p {
+      margin: 0;
+}
+    
+/*
 .mission {
     display: flex;
     justify-content: center;
@@ -411,31 +454,38 @@ header figure {
 }
 
 /* ==========================================================================
-   FAQ Page
-   ========================================================================== */
+                              FAQ Page
+========================================================================== */
 
 .faq {
+    background-color: #527158;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-flow: row wrap;
-  }
+}
   
-  .faq .content-wrapper {
+.faq .content-wrapper {
     margin: 50px 0 0 0;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-flow: row wrap;
-  }
+}
   
 .faq h2 {
     margin-bottom: 40px;
-  }
+    line-height: 1;
+}
   
 .faq-content {
     margin-bottom: 50px;
-  }
+}
+  
+.faq-content h4 {
+    line-height: 1.333;
+    font-weight: 700;
+}
 
  /* ==========================================================================
    Helper classes
@@ -524,108 +574,149 @@ header figure {
    Modify as content requires.
    ========================================================================== */
 
-   @media only screen and (min-width:768px) {
-    /*Tablet styles here*/
+@media only screen and (min-width:768px) {
   
-    /* General styles */
-    .content-wrapper {
-      max-width: 640px;
-      margin: 100px 0;
-    }
   
-    /* Header */
-    header {
-      justify-content: space-around;
-    }
-  
-    header .content-wrapper {
-      width: 100%;
-      justify-content: space-between;
-    }
-  
-    header nav {
-      width: 20%;
-    }
-  
-    header nav ul {
-      justify-content: space-between;
-    }
-  
-    .header-divider {
-      display: none;
-    }
-    /* Hero Area */
-  
-    /* Aside */
+/* General styles */
 
-    aside {
-      background-color: #527158;
+.content-wrapper {
+   max-width: 640px;
+   margin: 100px 0;
+}
+  
+/* Header */
+header {
+   justify-content: space-around;
+}
+  
+header .content-wrapper {
+   width: 100%;
+   justify-content: space-between;
+}
+  
+header nav {
+   width: 20%;
+}
+  
+header nav ul {
+   justify-content: space-between;
+}
+  
+.header-divider {
+   display: none;
+}
 
-  }
+/* Hero Area */
+  
+.hero-area h1 {
+   font-size: 3em;
+   line-height: 1;
+   margin: 0;
+}
 
-    aside .content-wrapper {
-      margin: 50px 0;
-      display: flex;
-      justify-content: space-between;
-      flex-flow: row wrap;
+/* Aside */
+
+aside {
+   background-color: #527158;
+
+}
+
+aside .content-wrapper {
+   margin: 50px 0;
+   display: flex;
+   justify-content: space-between;
+   flex-flow: row wrap;
      
-    }
+}
   
-    aside .content-wrapper .form-description,
-    aside .content-wrapper .form {
-      width: 35%;
-      margin: 0;
+aside .content-wrapper .form-description,
+aside .content-wrapper .form {
+    width: 35%;
+    margin: 0;
       
-    }
+}
   
-    /* Features */
-    .features article {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      flex-flow: column wrap;
-      flex-basis: 50%;
-    }
+/* Features */
+
+.features article {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-flow: column wrap;
+    flex-basis: 50%;
+}
     
-    .features .features-item-description {
-      width: 50%;
-    }
+.features .features-item-description {
+    width: 50%;
+}
   
-    /* Reviews */
-    .reviews article {
-      display: flex;
-      justify-content: space-between;
-    }
+/* Reviews */
+
+.reviews article {
+    display: flex;
+    justify-content: space-between;
+}
+
+.reviews h2 {
+    width: 90%;
+}
   
-    .reviews article div {
-      width: 49%;
-    }
+.reviews article figure,
+.reviews article div {
+     width: 49%;
+}
   
-    /* Footer */
-    footer .content-wrapper {
+/* Footer */
+
+footer .content-wrapper {
       width: 65%;
       margin: 100px 0;
-    }
+}
   
-    .footer-content {
+.footer-content {
       display: flex;
       justify-content: space-between;
       align-items: center;
-    }
+}
   
-    footer .contact {
+footer .contact {
       margin-bottom: 0;
-    }
+}
   
-    footer .copyright {
+footer .copyright {
       width: 100%;
-    }
+}
   
-    /* ==========================================================================
-     About Page
-     ========================================================================== */
+/* ==========================================================================
+                            About Page
+========================================================================== */
   
-    .mission-content {
+.mission-content {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+}
+  
+.mission-content p {
+      width: 40%;
+}
+  
+.contact-section .content-wrapper h2 {
+      width: 80%;
+}
+  
+.contact-content {
+      display: flex;
+      justify-content: space-between;
+      align-items: flex-start;
+}
+  
+.contact-content h4 {
+      font-size: 1.5em;
+}
+  
+
+ /*   .mission-content {================================================================
       display: flex;
       justify-content: space-between;
       align-items: center;
@@ -662,11 +753,32 @@ header figure {
   }
  
   
-    /* ==========================================================================
-     FAQ Page
-     ========================================================================== */
+/* ==========================================================================
+                             FAQ Page
+========================================================================== */
   
-    .faq .content-wrapper {
+.faq .content-wrapper {
+      justify-content: space-between;
+}
+  
+.faq-content {
+      flex-basis: 40%;
+}
+  
+.faq h2 {
+      width: 100%;
+}
+  
+.faq h4,
+.faq p {
+      font-size: .875em;
+      line-height: 1.125;
+}
+  
+
+
+
+   /*  .faq .content-wrapper {================================================
       justify-content: space-between;
     }
   
@@ -677,8 +789,13 @@ header figure {
     .faq h2 {
       width: 100%;
     }
-  }
-
+  
+    .faq h4,
+    .faq p {
+        font-size: .875em;
+        line-height: 1.125;
+    }
+  -------------------------------------------------------------------------------
 @media only screen and (min-width: 1200px) {  
 /*Desktop styles here */  
 
@@ -692,73 +809,176 @@ header figure {
       width: 70%;
 }
      
-        /* Aside */
+/* Aside */
 aside .content-wrapper {
-            justify-content:
-        }
+      justify-content:
+}
      
-        aside .content-wrapper .form-description,
-        aside .content-wrapper .form {
-            width: 30%;
-        }
+aside .content-wrapper .form-description,
+aside .content-wrapper .form {
+      width: 30%;
+}
      
-        /* Features */
-        .features h2 {
-            width: 70%;
-        }
+/* Features */
+
+.features h2 {
+      width: 70%;
+}
      
-        .features article {
-            flex-basis: 33%;
-        }
+.features article {
+      flex-basis: 33%;
+}
      
-        /* Reviews */ 
-        .reviews article div {
-            width: 50%;
-        }
+/* Reviews */ 
+.reviews article div {
+      width: 50%;
+}
 
         
      
-    /* ==========================================================================
-       About Page
-       ========================================================================== */
-        .mission h2,
-        .contact-section .content-wrapper h2 {
-            width: 100%;
-        }
+/* ==========================================================================
+                              About Page
+========================================================================== */
+.mission h2,
+.contact-section .content-wrapper h2 {
+      width: 100%;
+}
      
-        .contact-section .content-wrapper h2 {
-            margin-bottom: 100%;
-        }
+.contact-section .content-wrapper h2 {
+      margin-bottom: 100%;
+}
 
-        .map figure {
-          width: 450%;
-          height: 0; 
-          padding-bottom: 40%; 
-          overflow: hidden;
-          position: relative;
-      }
+.map figure {
+      width: 450%;
+      height: 0; 
+      padding-bottom: 40%; 
+      overflow: hidden;
+      position: relative;
+}
 
-        .map iframe {
-          width: 100%;
-          height: 100%;
-          position: absolute; 
-          top: 0; 
-          left: 0; 
-      }
+.map iframe {
+      width: 100%;
+      height: 100%;
+      position: absolute; 
+      top: 0; 
+      left: 0; 
+}
      
      
-    /* ==========================================================================
-       FAQ Page
-       ========================================================================== */
-        .faq h2 {
-            width: 100%;
+/* ==========================================================================
+                            FAQ Page
+========================================================================== */
+
+.faq .content-wrapper {
+     justify-content: space-between;
+}
+    
+.faq-content {
+      flex-basis: 40%;
+}
+    
+.faq h2 {
+      width: 100%;
+}
+    
+.faq h4,
+.faq p {
+      font-size: .875em;
+      line-height: 1.125;
+}
+    
+ @media only screen and (min-width:1200px) {
+
+      
+.content-wrapper {
+      max-width: 960px;
+}
+      
+h2 {
+      font-size: 2.25em;
+}
+      
+h3,
+h4 {
+      font-size: 1.875em;
+}
+      
+p {
+      font-size: 1.125em;
+      line-height: 1.333;
+}
+
+/* Hero */
+.hero-area h1 {
+      font-size: 3.75em;
+      width: 60%;
+}
+      
+/* Aside */
+aside .content-wrapper {
+      justify-content: space-around;
+}
+      
+aside .content-wrapper .form-description,
+aside .content-wrapper .form {
+      width: 30%;
+}
+      
+.form-description p {
+      font-size: 1.125em;
+}
+      
+/* Features */
+      
+.features h2 {
+      width: 70%;
+}
+      
+.features article {
+      flex-basis: 33%;
+}
+        
+/* Reviews */
+.reviews article div {
+      width: 42%;
+}
+ /* ==========================================================================
+                                About Page
+========================================================================== */
+      
+.mission h2,
+.contact-section .content-wrapper h2 {
+      width: 100%;
+      font-size: 3em;
+}
+      
+.contact-section .content-wrapper h2 {
+      margin-bottom: 40px;
+}
+      
+.contact-content h4 {
+      font-size: 1.875em;
+}
+      
+/* ==========================================================================
+                                 FAQ Page
+========================================================================== */
+        
+.faq h2 {
+      width: 100%;
+      font-size: 3em;
+}
+      
+        
+.faq-content {
+      flex-basis: 35%;
         }
-     
-        .faq-content {
-            flex-basis: 50%;
-        }
-     
-    }
+          
+.faq h4,.faq p {
+      font-size: 1.125em;
+      line-height: 1;
+}
+      
 
 @media print,
        (-webkit-min-device-pixel-ratio: 1.25),
